--- a/templates/components/add_platform_modal.html
+++ b/templates/components/add_platform_modal.html
@@ -11,7 +11,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <form id="addPlatformForm">
-                {{ csrf_token() }}
+                <!-- CSRF token handled by JavaScript -->
                 <div class="modal-body">
                     <div class="mb-3">
                         <label for="platformName" class="form-label">Connection Name <span
