--- a/templates/platform_management.html
+++ b/templates/platform_management.html
@@ -207,7 +207,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <form id="editPlatformForm">
-                {{ csrf_token() }}
+                <!-- CSRF token handled by form validation -->
                 <input type="hidden" id="editPlatformId" name="platform_id">
                 <div class="modal-body">
                     <div class="mb-3">
